--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI 사주 규칙 대시보드</title>
+    <title>AI 규칙 대시보드</title>
   </head>
   <body class="bg-dark text-white">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
+
