--- a/kb_frontend/public/index.html
+++ b/kb_frontend/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>명리학 지식 네트워크</title>
+    <title>suri AI 네트워크</title>
   </head>
   <body>
     <div id="root"></div>
